--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@
     --bg-btn-secundario: #D8DFE8;
     --bgn-btn-hover: #fff;
 
-    --h-footer: 10rem;
+    --h-footer:10rem;
 }
 
 *,
@@ -29,7 +29,7 @@ body {
 
 .contenedor-principal {
     width: 100%;
-    height: calc(100vh - var(--h-footer));
+    min-height: calc(100vh - var(--h-footer));
     display: flex;
 }
 
@@ -53,7 +53,7 @@ main {
 main section {
     padding: 0 1rem;
     border-radius: 50%;
-    height: 100%;
+    /* height: 100%; */
 }
 
 .txt {
@@ -113,7 +113,7 @@ main section {
 
 main section.entrada {
     width: 60%;
-    padding: 1rem;
+    height: 100% ;
 }
 
 .entrada .texto {
@@ -123,9 +123,14 @@ main section.entrada {
     font-size: 1.5em;
     color: hsl(213, 84%, 24%);
 }
-.entrada .contenedor-botones p{
-    padding-top: 1rem;
-    margin: 0 1.3rem;
+
+.entrada .contenedor-botones .alerta{
+    margin-left: 1rem;
+    display: flex;
+    align-items: center;
+}
+.entrada .contenedor-botones .alerta p{
+    padding-left: 5px;
     font-size: .9rem;
 
 }
@@ -142,34 +147,44 @@ main section.entrada {
 
 main section.salida {
     width: 40%;
-    height: 100%;
+    /* height: 100%; */
     padding: 1rem;
     background-color: var(--bg-blanco);
     box-shadow: 0 0 5px #00000037;
     border-radius: 1rem;
 }
-section.salida .mensaje{
-    /* display: none; */
+section.salida .contenedor-mensaje{
     height: 100%;
-    display: flex;
-    flex-wrap: wrap;
+    /* flex-wrap: wrap; */
+    flex-direction: column;
     justify-content: center;
     align-content: center;
 }
 
+section.salida .contenedor-mensaje img{
+    max-width: 300px;
+    margin: auto;
+}
 
-section.salida .mensaje h3, section.salida .mensaje p{
+section.salida .contenedor-mensaje h3, section.salida .contenedor-mensaje p{
     padding: 5px 0;
     text-align: center;
 }
 
 .salida .contenedor-salida{
     height: 100%;
-    display: none;
+    flex-direction: column;
 }
 
 .salida .contenedor-salida .texto{
     height: calc(100% - 55.6px);
+    padding: 1rem;
+}
+.contenedor-salida .texto .txt{
+    font-size: 1.5rem;
+    overflow:  hidden;
+    resize: none;
+    height: auto;
 }
 .salida .contenedor-salida .boton .btn{
     margin-top: 10px;
@@ -181,15 +196,64 @@ section.salida .mensaje h3, section.salida .mensaje p{
     background: #0a387113;
 }
 
+footer{
+    padding: 1rem;
+    text-align: center;
+}
+
+.mostrar{
+    display: flex ;
+}
+
+.ocultar {
+    display: none;
+}
+
 @media (max-width: 992px){
-    section.salida .mensaje img{
+    section.salida .contenedor-mensaje img{
         width: 100%;
     }
 }
 
+/* medida pc */
+@media (max-width: 1200px){
+    body{
+        width: 100%;
+        padding: 2rem;
+    }
+}
+
+ /* medida tabled */
 @media (max-width: 768px){
-    section.salida .mensaje img{
-        /* width: 100%; */
+    .contenedor-principal{
+        margin-top: -3rem;
+        flex-direction: column;
+    }
+    section.salida .contenedor-mensaje img{
         display: none;
+    }
+    main{
+        flex-direction: column;
+        flex-wrap: nowrap;
+    }
+    main section {
+        width: 100% !important;
+        margin-bottom: 1rem;
+    }
+    section.salida {
+        padding: 3rem;
+    }
+}
+
+/* medida movil */
+@media ( max-width: 576px) {
+    .entrada .texto {
+        height: calc(100% - 135px);
+    }
+    .contenedor-botones .botones{
+        flex-direction: column;
+    }
+    .contenedor-botones .botones .btn{
+        margin: .3rem 0;
     }
 }
